# FEAnalysisApp

./: README.md  main.py  requirements.txt  setup.cfg
assets/styles/: dark_mode.qss  light_mode.qss
core/: direct_solver.py  distributed_load_converter.py  iterative_solver.py  main_solver.py  process_imported_structure.py  stiffness_matrix_direct.py
core/isoparametric_elements/: linear_frame_element.py
data/: config.py  default_material.json  imported_data.json  material_library_bk.json  original_units.json  saved_units.json  selected_units.json  structure_types.json
data/defaults/: cross_section.json  element.json  node.json  properties.json  units.json
data/libraries/: cross_section.json  material.json
examples/: 2D_Beam.txt  2D_Truss.txt  3D_Frame.txt  3D_Truss.txt
gui/: analysis_window.py  central_dock_window.py  file_viewer.py  left_dock_window.py  loading_spinner.py  main_window.py  report_viewer.py  results_viewer.py  setup_docks.py  tree_widget.py  units_handling.py
src/: config.py  constants.py
src/core/: structure_io.py
src/core/elements/: bar.py  beam.py
src/core/solvers/: direct.py  iterative.py  solvers.py
src/gui/: setup_docks.py
src/gui/viewers/: file.py  report.py  results.py
src/gui/widgets/: loading_spinner.py  tree_widget.py
src/utils/: classes.py  http.py  io.py  units.py
tests/: pytest.ini  test_linear_bar_element.py  test_linear_beam_element.py  test_linear_frame_element.py  test_standard_shape_functions_syms.py
utils/: error_handler.py  file_io.py  http_server_thread.py  utils_classes.py
(+4 files in other folders)
