[metadata]
name = feanalysisapp
version = 1.0
author = Abdel Dorgham
author_email = a.k.y.dorgham@gmail.com
description = Finite Element Analysis Application
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    PyQt6
    PyQt6-WebEngine
    matplotlib
    plotly
    qdarkstyle
    reportlab
    setuptools

python_requires = >=3.9 

include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    feanalysisapp = feanalysisapp:main

[options.extras_require]
dev =
    pytest
    coverage
    flake8